使用 Colaboratory 建立

--- a/Iris_資料集探索.ipynb
+++ b/Iris_資料集探索.ipynb
@@ -7,7 +7,7 @@
       "toc_visible": true,
       "history_visible": true,
       "mount_file_id": "1rAF5-pRybOzdclL8H0OehGHofPMWSkVA",
-      "authorship_tag": "ABX9TyM21rhYYe0zDIB5RRWfi21a",
+      "authorship_tag": "ABX9TyO6RF8DqJbNadGsedMFNIZE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 19,
       "metadata": {
         "id": "En5BtR6lqxct"
       },
@@ -68,9 +68,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pbH4jbWYD9Ib",
-        "outputId": "02d34579-bec3-4d6e-e3e3-673b884663cb"
+        "outputId": "fd4ba05f-b43e-43fa-c4b6-3bbcf65cbe8d"
       },
-      "execution_count": 3,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -229,7 +229,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 20
         }
       ]
     },
@@ -255,10 +255,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e233a9ce-56ca-4487-c2d4-2ae1d99083ed",
+        "outputId": "428073c2-dfea-43f8-b7dd-e120f38bde5e",
         "id": "zTPbqRa9K1gB"
       },
-      "execution_count": 9,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -417,7 +417,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 21
         }
       ]
     },
@@ -441,12 +441,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 424
+          "height": 0
         },
         "id": "YX-jowaEDmVE",
-        "outputId": "27bbadf0-52c3-4e93-a977-b22f36ab5c1c"
+        "outputId": "8c9d8465-4ce5-4709-d783-f027a5620345"
       },
-      "execution_count": 6,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -469,7 +469,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0f1b55b9-e843-4e08-8b28-e0e9e2da771c\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-42a1b0ad-38c1-4325-9ca4-90de00c338b4\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -591,7 +591,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0f1b55b9-e843-4e08-8b28-e0e9e2da771c')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-42a1b0ad-38c1-4325-9ca4-90de00c338b4')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -643,12 +643,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-0f1b55b9-e843-4e08-8b28-e0e9e2da771c button.colab-df-convert');\n",
+              "        document.querySelector('#df-42a1b0ad-38c1-4325-9ca4-90de00c338b4 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-0f1b55b9-e843-4e08-8b28-e0e9e2da771c');\n",
+              "        const element = document.querySelector('#df-42a1b0ad-38c1-4325-9ca4-90de00c338b4');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -668,8 +668,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-35ade339-7598-4fb4-8fcf-e3cc3c197023\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-35ade339-7598-4fb4-8fcf-e3cc3c197023')\"\n",
+              "<div id=\"df-365e5924-b292-4fbd-bde7-43689f9e60da\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-365e5924-b292-4fbd-bde7-43689f9e60da')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -788,14 +788,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-35ade339-7598-4fb4-8fcf-e3cc3c197023 button');\n",
+              "        document.querySelector('#df-365e5924-b292-4fbd-bde7-43689f9e60da button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_fa8f0cb6-5e09-430c-a92d-821414be5e3f\">\n",
+              "  <div id=\"id_4e6717b2-580e-4b80-9db6-2ba7d6f59e09\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -839,7 +839,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_fa8f0cb6-5e09-430c-a92d-821414be5e3f button.colab-df-generate');\n",
+              "        document.querySelector('#id_4e6717b2-580e-4b80-9db6-2ba7d6f59e09 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -860,7 +860,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 22
         }
       ]
     },
@@ -879,7 +879,7 @@
       "metadata": {
         "id": "9dJq6w7vQMDQ"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -892,10 +892,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "68613eed-8620-4e18-c5b8-df94cf047a5c",
+        "outputId": "e15b0f29-a536-4ef0-f3bc-0d7781e59788",
         "id": "L1oeriH3QMa0"
       },
-      "execution_count": 10,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1054,7 +1054,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 23
         }
       ]
     },
@@ -1085,9 +1085,7 @@
         "                     columns= ['SepalLengthCm','SepalWidthCm','PetalLengthCm','PetalWidthCm','Species'])\n",
         "\n",
         "# 顯示 DataFrame\n",
-        "df_data\n",
-        "\n",
-        "print(df_data)\n"
+        "df_data\n"
       ],
       "metadata": {
         "colab": {
@@ -1095,9 +1093,9 @@
           "height": 424
         },
         "id": "zN5p-EkVQtTP",
-        "outputId": "709d10e4-cf69-4dcb-8fee-d80c4c01f1aa"
+        "outputId": "c40bd615-4410-4e4f-b6a6-aa333feccfa0"
       },
-      "execution_count": 12,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1120,7 +1118,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-477c2c2f-5a13-4deb-9f21-def95dd5104b\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-1327cce9-b85d-4941-a8e2-d142d865671c\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1242,7 +1240,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-477c2c2f-5a13-4deb-9f21-def95dd5104b')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1327cce9-b85d-4941-a8e2-d142d865671c')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1294,12 +1292,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-477c2c2f-5a13-4deb-9f21-def95dd5104b button.colab-df-convert');\n",
+              "        document.querySelector('#df-1327cce9-b85d-4941-a8e2-d142d865671c button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-477c2c2f-5a13-4deb-9f21-def95dd5104b');\n",
+              "        const element = document.querySelector('#df-1327cce9-b85d-4941-a8e2-d142d865671c');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1319,8 +1317,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-c899249f-f84c-472f-9be6-8c142b1f0d19\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c899249f-f84c-472f-9be6-8c142b1f0d19')\"\n",
+              "<div id=\"df-640bce80-b54b-4145-a710-ea456f895b0c\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-640bce80-b54b-4145-a710-ea456f895b0c')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1439,14 +1437,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-c899249f-f84c-472f-9be6-8c142b1f0d19 button');\n",
+              "        document.querySelector('#df-640bce80-b54b-4145-a710-ea456f895b0c button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_5e072cca-cd8e-4d93-8cf5-bf37ef78eaa4\">\n",
+              "  <div id=\"id_d7cc754f-fb5e-4c6f-8551-375a28e1317d\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -1490,7 +1488,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_5e072cca-cd8e-4d93-8cf5-bf37ef78eaa4 button.colab-df-generate');\n",
+              "        document.querySelector('#id_d7cc754f-fb5e-4c6f-8551-375a28e1317d button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -1511,7 +1509,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 24
         }
       ]
     }
